--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: "Vinh Lê"
-description: "a collection of random projects"
+title: "Vinh Lê Blog"
+description: "A Blog from ldvinhdhd"
 feedurl: "feed.xml"
 url: ""
-keywords: "Python, tutorials, machine learning, deep learning, natural language processing, evolutionary optimization, urban design, mobility, geospatial analysis, data science, web scraping, Cincinnati"
+keywords: "Vinh Lê, Vinh Le, Vinh Lee, Vinh Lê Blog, Vinh Le BLog, Vinh Lee Blog"
 
 future:      true
 highlighter: rouge
